# imgshape

./: CHANGELOG.md  README.md  pyproject.toml
imgshape/: imgshape.py
tests/: __init__.py  test_imgshape_get_picture_list.py  test_imgshape_get_shapes.py  test_imgshape_read_csv.py  test_imgshape_save_csv.py
